; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_pvcalls-front.c_pvcalls_front_read_todo.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_pvcalls-front.c_pvcalls_front_read_todo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock_mapping = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.pvcalls_data_intf* }
%struct.pvcalls_data_intf = type { i64, i32, i32 }

@PVCALLS_RING_ORDER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sock_mapping*)* @pvcalls_front_read_todo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pvcalls_front_read_todo(%struct.sock_mapping* %0) #0 {
  %2 = alloca %struct.sock_mapping*, align 8
  %3 = alloca %struct.pvcalls_data_intf*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.sock_mapping* %0, %struct.sock_mapping** %2, align 8
  %7 = load %struct.sock_mapping*, %struct.sock_mapping** %2, align 8
  %8 = getelementptr inbounds %struct.sock_mapping, %struct.sock_mapping* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.pvcalls_data_intf*, %struct.pvcalls_data_intf** %9, align 8
  store %struct.pvcalls_data_intf* %10, %struct.pvcalls_data_intf** %3, align 8
  %11 = load %struct.pvcalls_data_intf*, %struct.pvcalls_data_intf** %3, align 8
  %12 = getelementptr inbounds %struct.pvcalls_data_intf, %struct.pvcalls_data_intf* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %4, align 4
  %14 = load %struct.pvcalls_data_intf*, %struct.pvcalls_data_intf** %3, align 8
  %15 = getelementptr inbounds %struct.pvcalls_data_intf, %struct.pvcalls_data_intf* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  store i32 %16, i32* %5, align 4
  %17 = load %struct.pvcalls_data_intf*, %struct.pvcalls_data_intf** %3, align 8
  %18 = getelementptr inbounds %struct.pvcalls_data_intf, %struct.pvcalls_data_intf* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %6, align 8
  %20 = load i64, i64* %6, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %29, label %22

22:                                               ; preds = %1
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* @PVCALLS_RING_ORDER, align 4
  %26 = call i32 @XEN_FLEX_RING_SIZE(i32 %25)
  %27 = call i64 @pvcalls_queued(i32 %23, i32 %24, i32 %26)
  %28 = icmp ne i64 %27, 0
  br label %29

29:                                               ; preds = %22, %1
  %30 = phi i1 [ true, %1 ], [ %28, %22 ]
  %31 = zext i1 %30 to i32
  ret i32 %31
}

declare dso_local i64 @pvcalls_queued(i32, i32, i32) #1

declare dso_local i32 @XEN_FLEX_RING_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
